# O-olho-de-DEUS

./: .env.example  .gitignore  ALTERACOES_RECENTES.md  ATUALIZACAO_SVGs_RESUMO.md  ATUALIZAR-REPOSITORIO.bat  AUDITORIA_SEGURANCA_VIES.md  CHECKLIST_VERIFICACAO_FINAL.md  CLAUDE.md  ENVIAR_PARA_GITHUB.bat  ENVIO_GITHUB_RAPIDO.md  ESTRUTURA_PROJETO.md  GUIA_IMPLANTACAO_RAPIDA.md  IMPLEMENTACAO_CONCLUÍDA.md  INDICE_GERAL.md  ORGANIZACAO_CONCLUÍDA.md  PROMPT_ENVIO_GITHUB.md  README.md  README_FINAL_ORGANIZACAO.md  RELATORIO_FINAL_IMPLANTACAO.md  STATUS_ATUALIZACAO_SVGs.md  VERIFICAR.bat  check-repo.py  config.json  config.yaml.example  deploy.py  docker-compose.yml  enviar-github.py  fix-and-push.py  instalar.bat  main.py  pyproject.toml  setup_secure_install.py
.github/: SECURITY.md
LEGADO_v2.0.0/: LEIA-ME-ORGANIZACAO.md  MANIFESTO_LEGADO.md  ORGANIZAR_ARQUIVOS.ps1  README_ORGANIZACAO.md  requirements.txt
LEGADO_v2.0.0/scripts/: commit-push.bat  deploy-gitpython.py  upload-github-api.py  validar.bat
O-olho-de-DEUS/: import cv2.py
assets/: README.md
docker/edge/: Dockerfile
scripts/: organizar.bat  setup_postgres.sql  verificar-seguranca.ps1  verify_syntax.py
src/: __init__.py  security_system.py
src/cloud/: __init__.py  database.py  init_db.py
src/cloud/api/: __init__.py
src/cloud/api/middleware/: __init__.py  auth.py  rate_limiter.py
src/cloud/api/routes/: alerts.py  evidence.py  hitl.py
src/cloud/models/: __init__.py  hitl_decision.py  incident.py
src/cloud/services/: __init__.py  alert_service.py  fairness_service.py  notification_service.py
src/edge/: __init__.py  masker.py  processor.py  streamer.py
src/fairness/: __init__.py  bias_detector.py  metrics.py
src/forensic/: __init__.py  logger.py  merkle_tree.py  timestamp.py
src/hitl/: __init__.py  dashboard_server.py  operator_auth.py
src/privacy/: __init__.py  conditional_unblur.py  encryption.py  legal_basis.py  masker.py
tests/: __init__.py  test_security_system.py  validate_install.py
tests/edge/: __init__.py  test_edge.py
tests/fairness/: __init__.py  test_fairness.py
tests/forensic/: __init__.py  test_forensic.py
