[tool.poetry]
name = "olho-de-deus"
version = "3.0.0"
description = "Sistema de vigilancia com IA para deteccao facial e comportamental com conformidade LGPD"
authors = ["Lelolima <author@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Visao computacional e ML
opencv-python = "^4.8.0"
numpy = "^1.24.0"
onnxruntime = { version = "^1.15.0", optional = true }
scikit-learn = "^1.3.0"

# TensorRT (NVIDIA) ou OpenVINO (Intel) - instalar apenas um
# tensorrt = "^8.6.0"  # Uncomment se usar NVIDIA
# openvino = "^2023.0.0"  # Uncomment se usar Intel

# Criptografia e seguranca
cryptography = "^41.0.0"
pyjwt = "^2.8.0"

# HTTP e webhooks
requests = "^2.31.0"
aiohttp = "^3.8.0"

# FastAPI para backend cloud
fastapi = { version = "^0.100.0", optional = true }
uvicorn = { version = "^0.23.0", optional = true }
python-multipart = { version = "^0.0.6", optional = true }
python-jose = { version = "^3.3.0", optional = true }
passlib = { version = "^1.7.4", extras = ["bcrypt"], optional = true }

# Banco de dados
sqlalchemy = { version = "^2.0.0", optional = true }
psycopg2-binary = { version = "^2.9.0", optional = true }
pgvector = { version = "^0.2.0", optional = true }

# Streaming de eventos
kafka-python = { version = "^2.0.2", optional = true }

# GStreamer para RTSP
# gst-python = "^1.22.0"  # Requer instalacao manual do GStreamer

[tool.poetry.extras]
edge = ["onnxruntime"]
cloud = ["fastapi", "uvicorn", "python-multipart", "python-jose", "passlib", "sqlalchemy", "psycopg2-binary", "pgvector", "kafka-python", "pyjwt", "aiohttp"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
responses = "^0.23.0"  # Mock de requests HTTP

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true